<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>
    <groupId>io.github.cdpai</groupId>
    <artifactId>cdpai-gate-parent</artifactId>
    <version>0.1</version>
    <packaging>pom</packaging>

    <modules>
        <module>client</module>
        <module>app</module>
        <module>cli</module>
    </modules>

    <properties>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
        <maven.compiler.release>25</maven.compiler.release>
        <picocli.version>4.7.6</picocli.version>
        <jackson.version>2.21.2</jackson.version>
        <javafx.version>25.0.4</javafx.version>
        <luvjfx.version>1.0</luvjfx.version>
        <fxtrayicon.version>4.2.0</fxtrayicon.version>
    </properties>
</project>
